# Hyvemind

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  run.cmd
app/: index.html  (+6 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: audit.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 0001_hivemind.sql  0002_usage_log.sql  0003_hiveminds.sql  0004_hivemind_orchestrator.sql  0005_round_verdicts.sql  0006_job_review_id.sql  0007_logical_run_index.sql  0008_job_steps_prompt.sql  0009_merge_runs.sql  0010_context_sessions.sql  0011_sort_order.sql  0012_round_verdict_best_find.sql  0013_review_context_sessions.sql  0014_usage_log_source_id_idx.sql  0015_add_job_name.sql  0016_jobs_task_id.sql  0017_hivemind_orchestrator_context.sql  0018_perf_indexes.sql  0019_jobs_project_path.sql
app/src-tauri/pi-extensions/hyvemind-handoff/: index.ts  package.json
app/src-tauri/pi-extensions/hyvemind-providers/: index.ts  package.json
app/src-tauri/prompts/: guard_system.md  nurse_system.md  plan_system.md  queen_planning.md  queen_system.md  scout_system.md  stability_test_task.md  stability_test_verifier.md  worker_system.md
app/src-tauri/prompts/templates/: AGENTS.md.tmpl  notes.md.tmpl  services.yaml.tmpl
app/src-tauri/proptest-regressions/core/: scheduler.txt
app/src-tauri/proptest-regressions/hivemind/: backoff.txt
app/src-tauri/src/: lib.rs  main.rs  sentry_setup.rs  tunables.rs
app/src-tauri/src/commands/: chat.rs  dashboard.rs  extensions.rs  hivemind.rs  mod.rs  nurse.rs  sessions.rs  settings.rs  swarms.rs  tasks.rs  tests.rs  util.rs
app/src-tauri/src/core/: README.md  budget.rs  guard.rs  handoff.rs  idempotency.rs  mod.rs  queen.rs  readiness.rs  recovery.rs  scheduler.rs  scout.rs  scout_review.rs  services.rs  stability_test.rs  swarm_context.rs  validation.rs  worker.rs
app/src-tauri/src/domain/: README.md  mod.rs  swarm.rs
app/src-tauri/src/extensions/: README.md  context.rs  mod.rs  poller.rs  registry.rs  tests.rs  traits.rs  types.rs
app/src-tauri/src/hivemind/: README.md  backoff.rs  cache.rs  circuit_breaker.rs  engine.rs  error.rs  events.rs  merge_capture.rs  mod.rs  output_capture.rs  phase.rs  review_log.rs  review_schema.rs  store.rs  verdicts.rs
app/src-tauri/src/nurse/: README.md  batch_review.rs  budget.rs  bus.rs  classifier.rs  config.rs  detector.rs  dispatcher.rs  engine.rs  health.rs  intervention.rs  intervention_writer.rs  mod.rs  playbook.rs  prompt.rs  schema.rs  snapshot.rs  storm_guard.rs  supervisor.rs  synthesized.rs
(+251 files in other folders)
